FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTOPENGL TRUE)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(.. ../Volt ../Contrib ../Contrib/Box2D_v2.1.2/Box2D)
file(GLOB_RECURSE Editor_SOURCES *.cpp)
file(GLOB_RECURSE Editor_HEADERS *.h)

QT4_WRAP_CPP(Editor_HEADERS_MOC ${Editor_HEADERS})

ADD_EXECUTABLE(editor ${Editor_SOURCES} ${Editor_HEADERS_MOC})
TARGET_LINK_LIBRARIES(editor ${VOLT_DEPENDENCIES} volt ${QT_LIBRARIES})
